add script for build jar files